# ruddydoc

./: .dockerignore  CI_CD_SETUP.md  Cargo.toml  DISTRIBUTION.md  DISTRIBUTION_SUMMARY.md  Dockerfile  INITIAL_PLAN.md  LICENSES.md  NOTICE  README.md  RELEASE_CHECKLIST.md  deny.toml
.cargo/: config.toml
.claude/agents/: architect.md  compliance.md  deno-engineer.md  designer.md  devops.md  frontend-engineer.md  legal.md  ontologist.md  qa-engineer.md  rust-engineer.md  team-lead.md
.github/: CICD_QUICK_REFERENCE.md  CI_TROUBLESHOOTING.md  validate-workflows.sh
.github/workflows/: rust-ci.yml  rust-release.yml
crates/ruddydoc-backend-asciidoc/: Cargo.toml
crates/ruddydoc-backend-asciidoc/src/: lib.rs
crates/ruddydoc-backend-asciidoc/tests/fixtures/: sample.adoc
crates/ruddydoc-backend-csv/: Cargo.toml
crates/ruddydoc-backend-csv/src/: lib.rs
crates/ruddydoc-backend-csv/tests/fixtures/: semicolons.csv
crates/ruddydoc-backend-docx/: Cargo.toml
crates/ruddydoc-backend-docx/src/: lib.rs
crates/ruddydoc-backend-html/: Cargo.toml
crates/ruddydoc-backend-html/src/: lib.rs
crates/ruddydoc-backend-html/tests/fixtures/: sample.html
crates/ruddydoc-backend-image/: Cargo.toml
crates/ruddydoc-backend-image/src/: lib.rs
crates/ruddydoc-backend-latex/: Cargo.toml
crates/ruddydoc-backend-latex/src/: lib.rs
crates/ruddydoc-backend-latex/tests/fixtures/: sample.tex
crates/ruddydoc-backend-md/: Cargo.toml
crates/ruddydoc-backend-md/src/: lib.rs
crates/ruddydoc-backend-pdf/: Cargo.toml
crates/ruddydoc-backend-pdf/src/: lib.rs
crates/ruddydoc-backend-pptx/: Cargo.toml
crates/ruddydoc-backend-pptx/src/: lib.rs
crates/ruddydoc-backend-webvtt/: Cargo.toml
crates/ruddydoc-backend-webvtt/src/: lib.rs
crates/ruddydoc-backend-webvtt/tests/fixtures/: sample.vtt
crates/ruddydoc-backend-xlsx/: Cargo.toml
crates/ruddydoc-backend-xlsx/src/: lib.rs
crates/ruddydoc-backend-xml/: Cargo.toml
crates/ruddydoc-backend-xml/src/: lib.rs
crates/ruddydoc-backend-xml/tests/fixtures/: sample_jats.xml  sample_uspto.xml
crates/ruddydoc-bench/: Cargo.toml
crates/ruddydoc-bench/benches/: export.rs  graph.rs  parsing.rs
crates/ruddydoc-bench/src/: lib.rs
crates/ruddydoc-cli/: Cargo.toml
crates/ruddydoc-cli/src/: main.rs
crates/ruddydoc-converter/: Cargo.toml
crates/ruddydoc-converter/src/: detect.rs  lib.rs  registry.rs
crates/ruddydoc-core/: Cargo.toml
crates/ruddydoc-core/src/: lib.rs
crates/ruddydoc-export/: Cargo.toml
crates/ruddydoc-export/src/: chunking.rs  doctags_export.rs  html_export.rs  json_export.rs  jsonld_export.rs  lib.rs  markdown_export.rs  rdfxml_export.rs  text_export.rs  webvtt_export.rs
crates/ruddydoc-export/tests/: markdown_roundtrip.rs
crates/ruddydoc-graph/: Cargo.toml
crates/ruddydoc-graph/src/: lib.rs
crates/ruddydoc-models/: Cargo.toml
crates/ruddydoc-models/src/: lib.rs  onnx.rs  postprocess.rs  preprocess.rs  registry.rs  types.rs  vlm_api.rs
crates/ruddydoc-ontology/: Cargo.toml
crates/ruddydoc-ontology/src/: lib.rs
crates/ruddydoc-pipeline/: Cargo.toml
crates/ruddydoc-pipeline/src/: doctags.rs  lib.rs  normalize.rs
crates/ruddydoc-server/: Cargo.toml
crates/ruddydoc-server/src/: http.rs  lib.rs  mcp.rs  state.rs
crates/ruddydoc-tests/: Cargo.toml  README.md
crates/ruddydoc-tests/src/: lib.rs
crates/ruddydoc-tests/tests/: compatibility_suite.rs
crates/ruddydoc-tests/tests/compatibility/: export_validation.rs  helpers.rs  mod.rs  roundtrip.rs  schema.rs  sparql.rs
docs/: cli-ux-spec.md  migration-from-docling.md  sparql-cookbook.md
npm/: README.md  install.js  package.json  run.js
ontology/: README.md  ruddydoc.ttl  shapes.ttl
packaging/homebrew/: ruddydoc.rb
scripts/: bench_vs_docling.sh
team/: README.md
team/architect/: SKILL.md
team/compliance/: SKILL.md
team/deno-engineer/: SKILL.md
team/designer/: SKILL.md
team/devops/: SKILL.md
team/frontend-engineer/: SKILL.md
team/legal/: SKILL.md
team/ontologist/: SKILL.md
team/qa-engineer/: SKILL.md
team/rust-engineer/: SKILL.md
team/team-lead/: SKILL.md
tests/: COMPATIBILITY_TEST_PLAN.md  COMPATIBILITY_TEST_SUITE_SUMMARY.md  COVERAGE_REPORT.md  PHASE2_QA_REPORT.md  PHASE2_TEST_PLAN.md
tests/fixtures/: sample.adoc  sample.csv  sample.html  sample.md  sample.tex  sample.vtt  sample_jats.xml  sample_uspto.xml  semicolons.csv  tabs.tsv
