[package]
name = "ruddydoc-backend-docx"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DOCX parser backend for RuddyDoc"

[dependencies]
ruddydoc-core = { workspace = true }
ruddydoc-graph = { workspace = true }
ruddydoc-ontology = { workspace = true }
quick-xml = { workspace = true }
zip = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
serde_json = { workspace = true }
