[package]
name = "ruddydoc-backend-image"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Image backend for RuddyDoc (OCR-only flow)"

[dependencies]
ruddydoc-core = { workspace = true }
ruddydoc-ontology = { workspace = true }
image = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
ruddydoc-graph = { workspace = true }
serde_json = { workspace = true }
