[package]
name = "ruddydoc-backend-xml"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XML parser backends (USPTO, JATS, XBRL) for RuddyDoc"

[dependencies]
ruddydoc-core = { workspace = true }
ruddydoc-graph = { workspace = true }
ruddydoc-ontology = { workspace = true }
quick-xml = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
serde_json = { workspace = true }
