[package]
name = "ruddydoc-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Criterion benchmark suite for RuddyDoc"
publish = false

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "export"
harness = false

[[bench]]
name = "graph"
harness = false

[dependencies]
ruddydoc-core = { workspace = true }
ruddydoc-graph = { workspace = true }
ruddydoc-ontology = { workspace = true }
ruddydoc-converter = { workspace = true }
ruddydoc-export = { workspace = true }
ruddydoc-backend-md = { workspace = true }
ruddydoc-backend-html = { workspace = true }
ruddydoc-backend-csv = { workspace = true }
ruddydoc-backend-latex = { workspace = true }
criterion = { workspace = true }
sha2 = "0.10"
