[package]
name = "ruddydoc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fast document conversion with embedded knowledge graph"
keywords = ["document", "pdf", "conversion", "rdf", "sparql"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "ruddydoc"
path = "src/main.rs"

[dependencies]
ruddydoc-core = { workspace = true }
ruddydoc-converter = { workspace = true }
ruddydoc-export = { workspace = true }
ruddydoc-graph = { workspace = true }
ruddydoc-ontology = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
