[package]
name = "ruddydoc-export"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Document export formats for RuddyDoc"

[dependencies]
ruddydoc-core = { workspace = true }
ruddydoc-graph = { workspace = true }
ruddydoc-ontology = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
ruddydoc-backend-md = { workspace = true }
sha2 = "0.10"
