[package]
name = "ruddydoc-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Oxigraph-based document store for RuddyDoc"

[dependencies]
ruddydoc-core = { workspace = true }
oxigraph = { workspace = true }
serde_json = { workspace = true }
