[package]
name = "ruddydoc-ontology"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Document ontology definitions and SHACL shapes for RuddyDoc"

[dependencies]
ruddydoc-core = { workspace = true }
ruddydoc-graph = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
