[package]
name = "ruddydoc-pipeline"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Document processing pipeline orchestration for RuddyDoc"

[features]
default = []

[dependencies]
ruddydoc-core = { workspace = true }
ruddydoc-graph = { workspace = true }
ruddydoc-ontology = { workspace = true }
ruddydoc-models = { workspace = true, default-features = false }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
ruddydoc-graph = { workspace = true }
