[package]
name = "ruddydoc-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
ruddydoc-core = { workspace = true }
ruddydoc-graph = { workspace = true }
ruddydoc-ontology = { workspace = true }
ruddydoc-export = { workspace = true }
ruddydoc-backend-md = { workspace = true }
ruddydoc-backend-html = { workspace = true }
ruddydoc-backend-csv = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
unicode-normalization = "0.1"
